--- a/playbooks/linux/update/playbook.yml
+++ b/playbooks/linux/update/playbook.yml
@@ -1,40 +1,14 @@
 ---
-- name: Update Linux servers and reboot if needed
+- name: Super simple update and reboot
   hosts: all
   become: yes
   gather_facts: yes
 
   tasks:
-
-    - name: Update packages (Debian/Ubuntu)
-      apt:
-        update_cache: yes
-        upgrade: dist
-      when: ansible_os_family == 'Debian'
-
-    - name: Update packages (RedHat/CentOS)
-      yum:
+    - name: Update all packages
+      package:
         name: "*"
         state: latest
-      when: ansible_os_family == 'RedHat'
 
-    - name: Check if reboot is required (Debian/Ubuntu)
-      stat:
-        path: /var/run/reboot-required
-      register: reboot_required_file
-      when: ansible_os_family == 'Debian'
-
-    - name: Reboot if required (Debian/Ubuntu)
+    - name: Reboot after updates
       reboot:
-      when: ansible_os_family == 'Debian' and reboot_required_file.stat.exists
-
-    - name: Check if reboot is required (RedHat/CentOS)
-      command: needs-restarting -r
-      register: needs_reboot
-      changed_when: needs_reboot.rc == 1
-      failed_when: needs_reboot.rc not in [0, 1]
-      when: ansible_os_family == 'RedHat'
-
-    - name: Reboot if required (RedHat/CentOS)
-      reboot:
-      when: ansible_os_family == 'RedHat' and needs_reboot.rc == 1
