winrm insteead of ssh

--- a/playbooks/windows/install_standard_software/playbook.yml
+++ b/playbooks/windows/install_standard_software/playbook.yml
@@ -2,6 +2,10 @@
 - name: Install standard software on Windows
   hosts: all
   gather_facts: no
+  vars:
+    ansible_connection: winrm
+    ansible_winrm_transport: ntlm
+    ansible_winrm_server_cert_validation: ignore
 
   tasks:
     - name: Install Chocolatey
