--- a/playbooks/windows/create_test_user/playbook.yml
+++ b/playbooks/windows/create_test_user/playbook.yml
@@ -2,14 +2,12 @@
 - name: Create a local user "test" on Windows
   hosts: all
   gather_facts: yes
-  vars:
-    ansible_connection: winrm
-    ansible_winrm_transport: ntlm
-    ansible_winrm_server_cert_validation: ignore
+  collections:
+    - ansible.windows
 
   tasks:
     - name: Create user "test"
-      win_user:
+      ansible.windows.win_user:
         name: test
         password: PassWord1234!
         state: present
